<resources>
    <string name="app_name">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">New Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="my_profile">My Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_activity_navigationbar">Navigationbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>