<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/password"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#E8E5CC"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#D81010"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:text="@string/password" />

    <Button
        android:id="@+id/signin"
        android:layout_width="242dp"
        android:layout_height="59dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FBF6FB"
        android:text="Sign In"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755"
        tools:text="@string/sign_in" />

    <TextView
        android:id="@+id/myaccount"
        android:layout_width="225dp"
        android:layout_height="52dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#E3DEB2"
        android:text="  My Account"
        android:textColor="#ED0957"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/forgotpassword"
        android:layout_width="201dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FBF6FB"
        android:text="Forgot  Password ?"
        android:textColor="#EC1E1E"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        tools:text="@string/forgot_password" />

    <Button
        android:id="@+id/signin2"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#FBF6FB"
        android:text="Register"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        tools:text="@string/register" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="322dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#E8E5CC"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        tools:text="@string/email" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="132dp"
        android:layout_height="31dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#E37856"
        android:text=" User Name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#E37856"
        android:text=" Password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

</androidx.constraintlayout.widget.ConstraintLayout>